# P9-RAG-CHATBOT

./: .dockerignore  .gitignore  README.md  api.py  chatbot_rag.py  config.py  data_upload.py  docker-compose.yml  dockerfile  embedder.py  index_builder.py  pyproject.toml  vectore_store.py
.github/workflows/: CI.yaml
Docs/: ~$Architecture_projet.pptx  ~$pport_technique.docx
Ragas/: DATA_RAG_TEST.jsonl  evaluate_rag.py  ragas_results.jsonl
data/clean_data/: data_events_chunks.json  data_events_clean.json  embeddings.npy
data/data_brut/: Data_full.json  sample_json.json
tests/: test_api.py  test_indexbuilder.py  test_rag.py  test_upload.py  test_vectorestore.py
tests/data/clean_data/: data_events_chunks.json  embeddings.npy  test_clean_3_events.json
